fixed mistakes with menu overflow and form styles

--- a/src/styles/blocks/header/menu.scss
+++ b/src/styles/blocks/header/menu.scss
@@ -1,5 +1,6 @@
 .menu {
   height: 100vh;
+  overflow: auto;
 
   box-sizing: border-box;
   background-color: #c2c2c2;
