--- a/src/styles/blocks/main/about.scss
+++ b/src/styles/blocks/main/about.scss
@@ -2,7 +2,7 @@
   @include pageGrid;
 
   &__title {
-    grid-column: $grid-full-stretch;
+    grid-column: 1 / -1;
 
     @include onTablet {
       grid-column: 1 / 4;
@@ -14,7 +14,7 @@
   }
 
   &__description {
-    grid-column: $grid-full-stretch;
+    grid-column: 1 / -1;
 
     margin: 0;
 
