--- a/src/styles/blocks/main/compare.scss
+++ b/src/styles/blocks/main/compare.scss
@@ -6,7 +6,7 @@
 
   &__product {
     transition: $transition-speed;
-    grid-column: $grid-full-stretch;
+    grid-column: 1 / -1;
 
     @include hover(transform, scale(1.05));
 
