--- a/src/styles/blocks/main/contacts.scss
+++ b/src/styles/blocks/main/contacts.scss
@@ -6,7 +6,7 @@
 }
 
 .form {
-  grid-column: $grid-full-stretch;
+  grid-column: 1 / -1;
 
   display: flex;
   flex-direction: column;
@@ -21,6 +21,11 @@
   }
 
   &__field {
+    &:-webkit-autofill,
+    &:-webkit-autofill:focus {
+      transition: background-color 600000s 0s, color 600000s 0s;
+    }
+
     &::placeholder {
       color: #7e7e83;
       font-size: 14px;
@@ -58,7 +63,7 @@
 }
 
 .info {
-  grid-column: $grid-full-stretch;
+  grid-column: 1 / -1;
 
   display: flex;
   flex-direction: column;
