--- a/src/styles/blocks/main/details.scss
+++ b/src/styles/blocks/main/details.scss
@@ -92,7 +92,7 @@
   }
 
   &__description {
-    grid-column: $grid-full-stretch;
+    grid-column: 1 / -1;
 
     margin: 0;
     font-size: 16px;
