--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -31,16 +31,19 @@
     left: 0;
     right: 0;
 
-    transition: all 0.3s;
     opacity: 0;
+    transition: $transition-speed;
     transform: translateX(-100%);
     pointer-events: none;
-    z-index: 1;
 
     &:target {
       opacity: 1;
       transform: translateX(0);
       pointer-events: all;
     }
+  }
+
+  &:has(.page__menu:target) {
+    overflow: hidden;
   }
 }
