--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -4,5 +4,3 @@ $desktop-min-width: 1024px;
 $dark-theme-color: #1d1d1d;
 
 $transition-speed: all 300ms;
-
-$grid-full-stretch: 1 / -1;
